...
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.util.simpletimetracker.feature_views.RecordView
        android:id="@+id/viewRecordItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-4dp"
        android:layout_marginEnd="4dp"
        app:cardElevation="@dimen/record_type_card_elevation"
        app:itemTagColor="@color/white_alpha_60"
...
